--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,9 +14,9 @@
   weight = 20
 
 #[[main]]
-#  name = "Projects"
-#  url = "#projects"
-#  weight = 30
+#  name = "News"
+#  url = "project"
+#  weight = 20
 
 [[main]]
   name = "Publications"
