--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -13,10 +13,10 @@
   url = "post"
   weight = 20
 
-#[[main]]
-#  name = "News"
-#  url = "project"
-#  weight = 20
+[[main]]
+  name = "Research"
+  url = "experience"
+  weight = 30
 
 [[main]]
   name = "Publications"
